Segundo-envio-Estilos

--- a/assets/css/estilo.styl
+++ b/assets/css/estilo.styl
@@ -31,7 +31,23 @@ p
     font-family: 'Quicksand', sans-serif;
     font-size 1.2em
 .text-center 
-     text-align center   
+     text-align center
+/**
+Botões
+**/
+.bt
+    background-color #fff
+    border-radius 3px
+    box-shadow 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08)
+    box-sizing border-box
+    display inline-block
+    margin-right 8px
+    overflow hidden
+    padding 0.8em 1em
+    color #fff
+    &.bt-verde
+        background-color #009688
+        border-color #009688       
 /**
 Containers
 **/    
